--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             display: none;
         }
     </style></head><body>
-    <a-scene physics="gravity: -5">
+    <a-scene physics="gravity: 0"> <!-- Змінено гравітацію на 0 -->
         <a-assets>
             <img id="ground" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
             <img id="sky" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
@@ -115,24 +115,24 @@
             <a-light type="point" color="#ffffff" intensity="0.7" position="0 0.3 0"></a-light>
         </a-entity>
 
-        <!-- Виправлення для материнської плати: змінено тип фізичного тіла -->
-        <a-entity id="motherboard" mixin="interactive" position="0.4 1.2 0"  dynamic-body="shape: box; mass: 2" side-description="description: Материнська плата - основа системи.; offset: 0 0.1 -0.25" data-type="motherboard">
+        <!-- Змінено масу на 0.1 для всіх компонентів -->
+        <a-entity id="motherboard" mixin="interactive" position="0.4 1.2 0" dynamic-body="shape: box; mass: 0.1; linearDamping: 0.9; angularDamping: 0.9" side-description="description: Материнська плата - основа системи.; offset: 0 0.1 -0.25" data-type="motherboard">
             <a-gltf-model src="#motherboard-model" rotation="0 0 0" scale="0.5 0.5 0.5"></a-gltf-model>
         </a-entity>
         
-        <a-entity id="cpu" mixin="interactive" position="-0.267 1.2 -0.333" dynamic-body="shape: box; mass: 1" side-description="description: Процесор (CPU) - мозок комп'ютера.; offset: 0.15 0 0" data-type="cpu">
+        <a-entity id="cpu" mixin="interactive" position="-0.267 1.2 -0.333" dynamic-body="shape: box; mass: 0.1; linearDamping: 0.9; angularDamping: 0.9" side-description="description: Процесор (CPU) - мозок комп'ютера.; offset: 0.15 0 0" data-type="cpu">
             <a-gltf-model src="#cpu-model" rotation="0 0 0" scale="0.25 0.5 0.5"></a-gltf-model>
         </a-entity>
-        <a-entity id="ram" mixin="interactive" position="-0.267 1.2 0.267" dynamic-body="shape: box; mass: 1" side-description="description: Оперативна пам'ять (RAM).; offset: 0.16 0 0" data-type="ram">
+        <a-entity id="ram" mixin="interactive" position="-0.267 1.2 0.267" dynamic-body="shape: box; mass: 0.1; linearDamping: 0.9; angularDamping: 0.9" side-description="description: Оперативна пам'ять (RAM).; offset: 0.16 0 0" data-type="ram">
             <a-gltf-model src="#ram-model" rotation="0 0 0" scale="0.5 0.5 0.5"></a-gltf-model>
         </a-entity>
-        <a-entity id="gpu" mixin="interactive" position="-0.4 1.2 0" dynamic-body="shape: box; mass: 3" side-description="description: Відеокарта (GPU).; offset: 0 0.05 0.2" data-type="gpu">
+        <a-entity id="gpu" mixin="interactive" position="-0.4 1.2 0" dynamic-body="shape: box; mass: 0.1; linearDamping: 0.9; angularDamping: 0.9" side-description="description: Відеокарта (GPU).; offset: 0 0.05 0.2" data-type="gpu">
             <a-gltf-model src="#gpu-model" rotation="0 0 0" scale="0.5 0.5 0.5"></a-gltf-model>
         </a-entity>
-        <a-entity id="psu" mixin="interactive" position="0.267 1.2 -0.333" dynamic-body="shape: box; mass: 2" side-description="description: Блок живлення (PSU).; offset: 0.18 0.05 0" data-type="psu">
+        <a-entity id="psu" mixin="interactive" position="0.267 1.2 -0.333" dynamic-body="shape: box; mass: 0.1; linearDamping: 0.9; angularDamping: 0.9" side-description="description: Блок живлення (PSU).; offset: 0.18 0.05 0" data-type="psu">
             <a-gltf-model src="#psu-model" rotation="0 0 0" scale="0.5 0.5 0.5"></a-gltf-model>
         </a-entity>
-        <a-entity id="ssd" mixin="interactive" position="0.267 1.2 0.267" dynamic-body="shape: box; mass: 1" side-description="description: SSD накопичувач.; offset: 0.15 0 0" data-type="ssd">
+        <a-entity id="ssd" mixin="interactive" position="0.267 1.2 0.267" dynamic-body="shape: box; mass: 0.1; linearDamping: 0.9; angularDamping: 0.9" side-description="description: SSD накопичувач.; offset: 0.15 0 0" data-type="ssd">
             <a-gltf-model src="#ssd-model" rotation="0 0 0" scale="0.5 0.5 0.5"></a-gltf-model>
         </a-entity>
 
@@ -338,7 +338,7 @@
             AFRAME.registerComponent('toggle-physics-on-grab', {
                 schema: {
                     shape: {type: 'string', default: 'box'},
-                    mass: {type: 'number', default: 2},
+                    mass: {type: 'number', default: 0.1}, // Змінено масу на 0.1
                     angularDamping: {type: 'number', default: 0.8},
                     linearDamping: {type: 'number', default: 0.5}
                 },
